# xox

./: LICENSE  README  build.sh
src/: CMakeLists.txt  xox.c
src/common/: util.c  util.h
